--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,9 @@
 <html>
-<body>
-<h1> Chinni</h1>
-<p> She is a god gurl</p>
+<head>
+<title> Welcome to my page</title>
+</head>
+<body style="background-color:Grey;">
+<h1> Hey this is Chinni</h1>
+<p style="color:orange;"><i>Hope u will have a great visit to my website.</i></p>
 </body>
 </html>
